toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__invalid_binary_numbers-2.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"0b_\")"
---
Int 0..3
