toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__invalid_binary_numbers-3.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"0b2\")"
---
Int 0..3
