toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__invalid_binary_numbers-5.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"0b101a\")"
---
Int 0..6
