toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__keywords-2.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"letter fn_ comptime_\")"
---
Ident 0..6 
Whitespace 6..7 
Ident 7..10 
Whitespace 10..11 
Ident 11..20
