toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__newline_terminated_strings-2.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(r\"\n            \\\\Hello, world!\n            \\\\123 123\\\\\n            \")"
---
Newline 0..1 
Whitespace 1..13 
RawStr 13..28 
Newline 28..29 
Whitespace 29..41 
RawStr 41..52 
Newline 52..53 
Whitespace 53..65
