toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__newline_terminated_strings.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(r\"\\\\Hello, world!\")"
---
RawStr 0..15
