toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__t-2.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"a *= b;\")"
---
Ident 0..1 
Whitespace 1..2 
Star 2..3 
Eq 3..4 
Whitespace 4..5 
Ident 5..6 
Semi 6..7
