toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__t-5.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"a 1_000_000 123 _123\")"
---
Ident 0..1 
Whitespace 1..2 
Int 2..11 
Whitespace 11..12 
Int 12..15 
Whitespace 15..16 
Ident 16..20
